examples/test/testpolicy16800.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16800
  namespace: namespace412
spec:
  podSelector:
    matchLabels:
      key35: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value17
      podSelector:
        matchLabels:
          key16: value28
          key19: value43
          key40: value7
